Fixed sidebar overflow problem & added new styles

--- a/frontend/mobile-version.css
+++ b/frontend/mobile-version.css
@@ -2,15 +2,15 @@
     .container{
       display: flex;
       flex-direction: column;
-      grid-template-columns: none;
       height: auto;
       padding: 10px;
-      gap: 1.5rem;
+      gap: 1rem;
     }
     /* ========== Sidebar Section ========== */
     .sidebar{
       order: -1;
       width: 100%;
+      overflow: hidden;
     }
     .sidebar ul{
       display: flex;
@@ -18,7 +18,11 @@
       padding: 0px;
     }
     .sidebar li{
-      margin: 10px;
+      margin: 2px;
+    }
+    .side-icon{
+      width:30px;
+      height:30px;
     }
     /* ========== Main Content Section ========== */
     .body-grid{
@@ -62,9 +66,11 @@
     .seven-days{
       display: flex;
       flex-direction: row;
+      gap: 5px;
     }
     .day{
       border-radius: 20px;
+      padding: 10px;
     }
     #monday{
       border-radius: 20px;
